--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: rrabbi8's personal projects
+description: A compilation of rrabbi8's programming projects for The Odin Project web development course.
